front edite primary color

--- a/src/assets/styles/01-settings/global.scss
+++ b/src/assets/styles/01-settings/global.scss
@@ -10,7 +10,7 @@ $main-text-color: var(--main-text-color);
   --main-text-color-dark: #2b2d34;
 
   /* current */
-  --color-primary: #5cd5c4;
+  --color-primary: #6c5cd5;
   --color-primary: #414042;
   --color-primary-d: #272628;
   --color-primary-l: #676668;
