--- a/src/assets/styles/01-settings/global.scss
+++ b/src/assets/styles/01-settings/global.scss
@@ -14,7 +14,7 @@ $main-text-color: var(--main-text-color);
   --color-primary: #414042;
   --color-primary-d: #272628;
   --color-primary-l: #676668;
-  --color-primary-reverse: #ff6767;
+  --color-primary-reverse: #a967ff;
   --color-text: #7c8082;
   --bg-gray: #c6c7ce1a;
   --color-grey: #f5f7f9;
